[metadata]
license_files = LICENSE.txt

[yapf]
based_on_style = pep8
split_before_logical_operator = true
blank_line_before_nested_class_or_def = false
coalesce_brackets = true
dedent_closing_brackets = true
indent_closing_brackets = false
indent_width = 4
use_tabs = false
column_limit = 100

[mypy]
files = project_amber
namespace_packages = true

[mypy-bcrypt.*]
ignore_missing_imports = true

[mypy-flask_sqlalchemy.*]
ignore_missing_imports = true

[mypy-flask_cors.*]
ignore_missing_imports = true
